# SIC-XE-Assembler

./: CMakeLists.txt  CMakePresets.json  README.md  loader.sh
asm/: sic_assembler.cc  sic_assembler.h  sic_parser.cc  sic_parser.h  sic_table.cc  sic_table.h
loader/: CMakeLists.txt  common.h  loader.cc  sic_program.cc  sic_program.h
src/: CMakeLists.txt  main.cc  sic_assembler.cc  sic_assembler.h  sic_parser.cc  sic_parser.h  sic_table.cc  sic_table.h
